Fixed line-break spacing

--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -809,18 +809,36 @@
 .gallery-spacing-custom .elementor-image-gallery .gallery-icon {
   padding: 0; }
 
-.elementor-counter {
-  text-align: center; }
-  .elementor-counter .elementor-counter-number-wrapper {
-    font-size: 69px;
-    font-weight: 600;
-    color: #222222;
-    line-height: 1; }
-  .elementor-counter .elementor-counter-title {
-    font-size: 19px;
-    font-weight: 400;
-    color: #666666;
-    line-height: 2.5; }
+.elementor-counter .elementor-counter-number-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 69px;
+  font-weight: 600;
+  color: #222222;
+  line-height: 1; }
+
+.elementor-counter .elementor-counter-number-prefix {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: left; }
+
+.elementor-counter .elementor-counter-number-suffix {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: right; }
+
+.elementor-counter .elementor-counter-title {
+  text-align: center;
+  font-size: 19px;
+  font-weight: 400;
+  color: #666666;
+  line-height: 2.5; }
 
 .elementor-alert {
   padding: 15px;
